k8s/LoginAp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: loginapi-service
  namespace: dev
spec:
  selector:
    app: loginapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
