k8s/SimpleAPI-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleapi-service
  namespace: dev
spec:
  selector:
    app: simpleapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
