k8s/Springboot-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-rest-service
  namespace: dev
spec:
  selector:
    app: springboot-rest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8091
  type: ClusterIP
