k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: loginapi-service
                port:
                  number: 80
          - path: /data(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: simpleapi-service
                port:
                  number: 80
          - path: /report(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: springboot-rest-service
                port:
                  number: 80
